hemos finalizado el modelo para movil

--- a/index.html
+++ b/index.html
@@ -35,15 +35,18 @@
 
   <section class="data__info">
     <div class="subdata__info" >
-        <h2>10k+</h2> <p class="subdata__details">companies</p>
+        <h2>10k+</h2> 
+        <p class="subdata__details">companies</p>
     </div>
   
     <div class="subdata__info">
-        <h2>314</h2> <p class="subdata__details">templates</p>
+        <h2>314</h2> 
+        <p class="subdata__details">templates</p>
     </div>
   
     <div class="subdata__info">
-        <h2>12m+</h2> <p class="subdata__details">queries</p>
+        <h2>12m+</h2>
+        <p class="subdata__details">queries</p>
     </div>
   
   </section>
